fix animation on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -64,6 +64,7 @@ body {
 #loader-screen {
     opacity: 0;
     visibility: hidden;
+    display: none;
     transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out,
         transform 0.4s ease-in-out;
 }
@@ -72,7 +73,7 @@ body {
     width: 18rem;
 }
 #loader-screen svg text {
-    font-size: 5rem;
+    font-size: 4rem;
     stroke-width: 1;
     letter-spacing: 3px;
 }
@@ -85,6 +86,7 @@ body {
 #loader-screen.visible {
     opacity: 1;
     visibility: visible;
+    display: grid;
     transform: translate3d(0, 0, 0);
 }
 
